--- a/docs/Basic_tutorial/常见评估指标.md
+++ b/docs/Basic_tutorial/常见评估指标.md
@@ -134,4 +134,7 @@ $$
 
   + AUC < 0.5，比随机猜测还差；但只要总是反预测而行，就优于随机猜测.
 
-6. 
+6. **交叉验证**
+
+   交叉验证（Cross Validation）是一种比较好的衡量机器学习模型的统计分析方法，可以有效避免划分训练集和测试集时的随机性对评价结果造成的影响。我们可以把原始数据集平均分为$K$组不重复的子集，每次选$K − 1$组子集（ $K$一般大于3）作为训练集，剩下的一组子集作为验证集。这样可以进行$K$ 次试验并得到$K$ 个模型，将这$K$ 个模型在各自验证集上的错误率的平均作为分类器的评价。
+
