--- a/docs/DL_basics/神经网络基础.md
+++ b/docs/DL_basics/神经网络基础.md
@@ -30,7 +30,7 @@ $$
 f(x) = \frac{1}{1+e^{-x}}
 $$
 
-**激活函数**在神经元中非常重要的。为了增强网络的表示能力和学习能力，激活函数需要具备以下几点性质：
+**激活函数**在神经元中非常重要的，它将神经元线性输入转换为非线性，增强网络的表示能力和学习能力；激活函数需要具备以下几点性质：
 
 1. 连续并可导（允许少数点上不可导）的非线性函数。可导的激活函数可以直接利用数值优化的方法来学习网络参数。
   
@@ -44,7 +44,7 @@ $$
 
 1. Sigmoid型函数	
 
-   Sigmoid 型函数是指一类S型曲线函数，为两端饱和函数。常用的Sigmoid 型函数有Logistic 函数和Tanh 函数。
+   Sigmoid 型函数是指一类S型曲线函数，为两端饱和函数。优点是平滑容易求导，在早期的神经网络中经常使用，缺点就是容易造成梯度消失；计算相对复杂；函数均值不为0，输出值恒大于0，不利于下一层的神经元学习。常用的Sigmoid 型函数有Logistic 函数和Tanh 函数。
 
    
 
