--- a/docs/DL_basics/目标检测基础概念.md
+++ b/docs/DL_basics/目标检测基础概念.md
@@ -519,7 +519,7 @@ $$
 
 - 如果锚框包含了物体，那么它对应的预测框的中心位置和大小应该是多少，或者说上面计算式中的$t_x, t_y, t_w, t_h$应该是多少，使用location标签。
 
-- 如果锚框包含了物体，那么具体类别是什么，这里使用变量label来表示其所属类别的标签。
+- 如果锚框包含了物体，那么具体类别是什么，这里使用变量label来表示其所属类别的标签。classification
 
 选取任意一个锚框对它进行标注，也就是需要确定其对应的objectness, $(t_x, t_y, t_w, t_h)$和label，下面将分别讲述如何确定这三个标签的值。
 
@@ -542,7 +542,7 @@ $$ j = 328.42 / 32 = 10.263125$$
 
 它落在了第10行第4列的小方块内，如**图13**所示。此小方块区域可以生成3个不同形状的锚框，其在图上的编号和大小分别是$A_1(116, 90), A_2(156, 198), A_3(373, 326)$。
 
-用这3个不同形状的锚框跟真实框计算IoU，选出IoU最大的锚框。这里为了简化计算，只考虑锚框的形状，不考虑其跟真实框中心之间的偏移，具体计算结果如 **图14** 所示。
+用这3个不同形状的锚框**跟真实框计算IoU，选出IoU最大的锚框**。这里为了简化计算，只考虑锚框的形状，不考虑其跟真实框中心之间的偏移，具体计算结果如 **图14** 所示。
 
 
 <center><img src="https://ai-studio-static-online.cdn.bcebos.com/3008337ea66c44068042c670db54368edc56b1e43ced4b6b811bdc95b64ca3d5" width = "400"></center>
@@ -553,11 +553,11 @@ $$ j = 328.42 / 32 = 10.263125$$
 
 依次可以找出其他几个真实框对应的IoU最大的锚框，然后将它们的预测框的objectness标签也都设置为1。这里一共有$20 \times 15 \times 3 = 900$个锚框，只有3个预测框会被标注为正。
 
-由于每个真实框只对应一个objectness标签为正的预测框，如果有些预测框跟真实框之间的IoU很大，但并不是最大的那个，那么直接将其objectness标签设置为0当作负样本，可能并不妥当。为了避免这种情况，YOLO-V3算法设置了一个IoU阈值iou_threshold，当预测框的objectness不为1，但是其与某个真实框的IoU大于iou_threshold时，就将其objectness标签设置为-1，不参与损失函数的计算。
+由于每个真实框只对应一个objectness标签为正的预测框，如果有些预测框跟真实框之间的IoU很大，但并不是最大的那个，那么直接将其objectness标签设置为0当作负样本，可能并不妥当。为了避免这种情况，YOLO-V3算法**设置了一个IoU阈值iou_threshold（超参数，YOLO-V3里设置为0.7），当预测框的objectness不为1，但是其与某个真实框的IoU大于iou_threshold时，就将其objectness标签设置为-1，不参与损失函数的计算**。
 
 所有其他的预测框，其objectness标签均设置为0，表示负类。
 
-对于objectness=1的预测框，需要进一步确定其位置和包含物体的具体分类标签，但是对于objectness=0或者-1的预测框，则不用管他们的位置和类别。
+对于objectness=1的预测框，需要**进一步确定其位置和包含物体的具体分类标签**，但是对于objectness=0或者-1的预测框，则不用管他们的位置和类别。
 
 ##### 标注预测框的位置坐标标签
 
